<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewProductActivity">

    <ImageView
        android:id="@+id/product_view_image"
        android:layout_width="275dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_image_not_found" />

    <TextView
        android:id="@+id/product_view_name_word"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:background="@color/primary_dark_color"
        android:padding="5dp"
        android:text="@string/name_"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_view_image" />

    <TextView
        android:id="@+id/product_view_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:background="@color/secondary_light_color"
        android:padding="5dp"
        android:text="@string/product_name"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/product_view_name_word"
        app:layout_constraintTop_toBottomOf="@+id/product_view_image" />

    <TextView
        android:id="@+id/product_view_category_word"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="24dp"
        android:background="@color/primary_dark_color"
        android:padding="5dp"
        android:text="@string/category_"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_view_name_word" />


    <TextView
        android:id="@+id/product_view_category"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@color/secondary_light_color"
        android:padding="5dp"
        android:text="@string/product_category"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/product_view_category_word"
        app:layout_constraintTop_toBottomOf="@+id/product_view_name" />

    <TextView
        android:id="@+id/product_view_price_word"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="24dp"
        android:background="@color/primary_dark_color"
        android:padding="5dp"
        android:text="@string/price_"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_view_category_word" />

    <TextView
        android:id="@+id/product_view_price"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@color/secondary_light_color"
        android:padding="5dp"
        android:text="@string/product_price"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/product_view_price_word"
        app:layout_constraintTop_toBottomOf="@+id/product_view_category" />

    <TextView
        android:id="@+id/product_view_seller_word"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="24dp"
        android:background="@color/primary_dark_color"
        android:padding="5dp"
        android:text="@string/seller_"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_view_price_word" />

    <TextView
        android:id="@+id/product_view_seller_username"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@color/secondary_light_color"
        android:padding="5dp"
        android:text="@string/product_seller"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/product_view_seller_word"
        app:layout_constraintTop_toBottomOf="@+id/product_view_price" />

    <Button
        android:id="@+id/product_view_phone_number"
        android:layout_width="264dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:text="@string/phone_number"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_view_seller_username" />
</androidx.constraintlayout.widget.ConstraintLayout>